--- a/docs/features/models/classification.ipynb
+++ b/docs/features/models/classification.ipynb
@@ -4,60 +4,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Classification"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/classification.ipynb)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/text-classification-using-deeppavlov-library-with-pytorch-and-transformers-f14db5528821)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### Classification\n",
+    "\n",
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/deeppavlov/DeepPavlov/blob/master/docs/features/models/classification.ipynb)\n",
+    "\n",
+    "[![Medium](https://img.shields.io/badge/Medium-12100E?style=for-the-badge&logo=medium&logoColor=white)](https://medium.com/deeppavlov/text-classification-using-deeppavlov-library-with-pytorch-and-transformers-f14db5528821)\n",
+    "\n",
     "# Table of contents\n",
     "\n",
     "1. [Introduction to the task](#1.-Introduction-to-the-task)\n",
+    "\n",
     "2. [Get started with the model](#2.-Get-started-with-the-model)\n",
-    "3. [Use the model for prediction](#3.-Use-the-model-for-prediction)\n",
     "\n",
-    "    3.1. [Predict using Python](#3.1-Predict-using-Python)\n",
+    "3. [Models list](#3.-Models-list)\n",
     "\n",
-    "    3.2. [Predict using CLI](#3.2-Predict-using-CLI)\n",
-    "4. [Evaluation](#4.-Evaluation)\n",
+    "4. [Use the model for prediction](#4.-Use-the-model-for-prediction)\n",
     "\n",
-    "    4.1. [from Python](#4.1-Evaluate-from-Python)\n",
+    "    4.1. [Predict using Python](#4.1-Predict-using-Python)\n",
     "\n",
-    "    4.2. [from CLI](#4.2-Evaluate-from-CLI)\n",
-    "5. [Train the model on your data](#5.-Train-the-model-on-your-data)\n",
+    "    4.2. [Predict using CLI](#4.2-Predict-using-CLI)\n",
     "\n",
-    "    5.1. [from Python](#5.1-Train-your-model-from-Python)\n",
+    "5. [Evaluation](#5.-Evaluation)\n",
     "\n",
-    "    5.2. [from CLI](#5.2-Train-your-model-from-CLI)\n",
-    "6. [Models list](#6.-Models-list)\n",
+    "    5.1. [from Python](#5.1-Evaluate-from-Python)\n",
+    "\n",
+    "    5.2. [from CLI](#5.2-Evaluate-from-CLI)\n",
+    "\n",
+    "6. [Train the model on your data](#6.-Train-the-model-on-your-data)\n",
+    "\n",
+    "    6.1. [from Python](#6.1-Train-your-model-from-Python)\n",
+    "\n",
+    "    6.2. [from CLI](#6.2-Train-your-model-from-CLI)\n",
+    "\n",
     "7. [Simple few-shot classifiers](#7.-Simple-few-shot-classifiers)\n",
     "\n",
     "    7.1. [Few-shot setting](#7.1-Few-shot-setting)\n",
     "\n",
     "    7.2. [Multiple languages support](#7.2-Multiple-languages-support)\n",
     "\n",
-    "    7.3. [Dataset and Scores](#7.3-Dataset-and-Scores)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    7.3. [Dataset and Scores](#7.3-Dataset-and-Scores)\n",
+    "\n",
     "# 1. Introduction to the task\n",
     "This section describes a family of BERT-based models that solve a variety of different classification tasks.\n",
     "\n",
@@ -107,19 +93,29 @@
     "`insults_kaggle_bert` is the name of the model's *config_file*. [What is a Config File?](http://docs.deeppavlov.ai/en/master/intro/configuration.html)\n",
     "\n",
     "Configuration file defines the model and describes its hyperparameters. To use another model, change the name of the *config_file* here and further.\n",
-    "The full list of NER models with their config names can be found in the [table](#6.-Models-list)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "The full list of classification models with their config names can be found in the [table](#3.-Models-list).\n",
     "\n",
-    "# 3. Use the model for prediction\n",
+    "# 3. Models list\n",
     "\n",
-    "## 3.1 Predict using Python\n",
+    "The table presents a list of all of the classification models available in DeepPavlov Library.\n",
     "\n",
-    "After [model installation](#2.-Get-started-with-the-model) build it from the config and use it for prediction."
+    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
+    "| :--- | --- | --- | --- | --- | --- | ---: |\n",
+    "| insults_kaggle_bert | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
+    "| paraphraser_rubert | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
+    "| paraphraser_convers_distilrubert_2L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
+    "| paraphraser_convers_distilrubert_6L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
+    "| sentiment_sst_conv_bert | En | Sentiment | [SST](https://paperswithcode.com/dataset/sst) | 1.1 GB | Accuracy | 0.6626 |\n",
+    "| sentiment_twitter | Ru | Sentiment | [Twitter Mokoron](https://github.com/mokoron/sentirueval) | 6.2 GB | F1-macro | 0.9961 |\n",
+    "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
+    "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
+    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n",
+    "\n",
+    "# 4. Use the model for prediction\n",
+    "\n",
+    "## 4.1 Predict using Python\n",
+    "\n",
+    "After [installing](#2.-Get-started-with-the-model) the model, build it from the config and predict."
    ]
   },
   {
@@ -130,7 +126,7 @@
    "source": [
     "from deeppavlov import build_model\n",
     "\n",
-    "model = build_model('insults_kaggle_bert', download=True)"
+    "model = build_model('insults_kaggle_bert', download=True, install=True)"
    ]
   },
   {
@@ -166,13 +162,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3.2 Predict using CLI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "## 3.2 Predict using CLI\n",
+    "\n",
     "You can also get predictions in an interactive mode through CLI (Command Line Interface)."
    ]
   },
@@ -243,7 +234,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 5. Train the model on your data\n",
+    "# 5. Customize the model\n",
     "\n",
     "## 5.1 Train your model from Python\n",
     "\n",
@@ -373,32 +364,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6. Models list\n",
-    "\n",
-    "The table presents a list of all of the classification models available in DeepPavlov Library."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "| Config name  | Language | Task | Dataset | Model Size | Metric | Score |\n",
-    "| :--- | --- | --- | --- | --- | --- | ---: |\n",
-    "| insults_kaggle_bert | En | Insults | [Insults](https://www.kaggle.com/c/detecting-insults-in-social-commentary) | 1.1 GB | ROC-AUC | 0.8770 |\n",
-    "| paraphraser_rubert | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 2.0 GB | F1 | 0.8738 |\n",
-    "| paraphraser_convers_distilrubert_2L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.2 GB | F1 | 0.7396 |\n",
-    "| paraphraser_convers_distilrubert_6L | Ru | Paraphrase | [Paraphrase Corpus](http://paraphraser.ru/download/) | 1.6 GB | F1 | 0.8354 |\n",
-    "| sentiment_sst_conv_bert | En | Sentiment | [SST](https://paperswithcode.com/dataset/sst) | 1.1 GB | Accuracy | 0.6626 |\n",
-    "| sentiment_twitter | Ru | Sentiment | [Twitter Mokoron](http://study.mokoron.com/) | 6.2 GB | F1-macro | 0.9961 |\n",
-    "| rusentiment_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.3 GB | F1-weighted | 0.7005 |\n",
-    "| rusentiment_convers_bert | Ru | Sentiment | [RuSentiment](https://text-machine.cs.uml.edu/projects/rusentiment/) | 1.5 GB | F1-weighted | 0.7724  |\n",
-    "| topics_distilbert_base_uncased | En | Topics | [DeepPavlov Topics](https://deeppavlov.ai/datasets/topics) | 6.2 GB | F1-macro | 0.9961 |\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 7. Simple few-shot classifiers\n",
     "\n",
     "Additionally, in the [faq](https://github.com/deeppavlov/DeepPavlov/tree/master/deeppavlov/configs/faq) section you can find a config for a fast and simple pre-BERT model, which consists of a fasttext vectorizer and a simple logistic regression classifier.\n",
@@ -450,9 +415,7 @@
    ]
   }
  ],
- "metadata": {
-  "accelerator": "GPU"
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 4
 }
